Changes in Version 0.1.7 (2017-xx-xx)
=====================================
- Fix writing of configuration file on Windows
ae9ap9
 - Fix handling of gzipped files under Windows/Python2
datamodel
 - Datatypes are now explicitly preserved by function "toRecArray"
pybats
 - Many small changes and bugfixes (thanks John Haiducek)
 - Fix handling of gzipped files under Windows/Python2
pycdf
 - Proper handling of type guessing for negative integers and numpy scalars
 - Allow ... to get all gEntries
 - Allow insert, append on gAttrs
 - Properly handle reading from empty variables
 - Fix some type-guessing ordering in Python 3.6
 - Reading empty NRV variables will now return empty array (not padding)
 - Fix more cases of BAD_ENTRY_NUM when reading attribute entries
 - Fix UTC-to-TT2000 conversions on ARM (thanks Rodrigue Piberne for the bug)
 - Speed up many operations by cacheing variable numbers. This is the biggest
   change to pycdf internals in several years; please report any bugs.
 - Fix TT2000-to-EPOCH16 conversions crashing in very rare cases.
 - Minimize setting/unsetting readonly mode, as this can be very slow.

Changes in Version 0.1.6 (2016-09-08)
=====================================
- Improvements to test suite (coverage and design)
coordinates
 - Bugfix to allow correct slicing behavior when Coords class has attached ticks
datamanager
 - New module to help in finding, slicing, and manipulating data
 - Function "apply_index": help sort one multi-dimensional data set by another
 - Function "array_interleave": combine data from two arrays to make a new
 - Function "axis_index": prepare indices along the axis of an array
 - Function "flatten_idx": convert an index to an index into flattened array
 - Function "insert_fill" to make explicit gaps in irregular data
 - Function "rev_index": convert an index into its complement
 - Function "values_to_steps": convert values to index of unique, sorted values
datamodel
 - Fix reading JSON-headed ASCII in numpy 1.4, 1.5