@@ -491,6 +491,7 @@ class NoCDF(unittest.TestCase):
                    -1 * 2 ** 31,
                    numpy.array([5, 6, 7], dtype=numpy.uint8),
                    [4611686018427387904],
+                   numpy.array([1], dtype=numpy.object),
                    ]
         type8 = [((4,), [const.CDF_BYTE, const.CDF_INT1, const.CDF_UINT1,
                          const.CDF_INT2, const.CDF_UINT2,
@@ -526,6 +527,11 @@ class NoCDF(unittest.TestCase):
                  ((1,), [const.CDF_INT8,
                        const.CDF_FLOAT, const.CDF_REAL4,
                        const.CDF_DOUBLE, const.CDF_REAL8], 1),
+                 ((1,), [const.CDF_BYTE, const.CDF_INT1, const.CDF_UINT1,
+                         const.CDF_INT2, const.CDF_UINT2,
+                         const.CDF_INT4, const.CDF_UINT4, const.CDF_INT8,
+                         const.CDF_FLOAT, const.CDF_REAL4,
+                         const.CDF_DOUBLE, const.CDF_REAL8], 1),
                  ]
         types = [((4,), [const.CDF_BYTE, const.CDF_INT1, const.CDF_UINT1,
                          const.CDF_INT2, const.CDF_UINT2,
@@ -562,7 +568,13 @@ class NoCDF(unittest.TestCase):
                  ((3,), [const.CDF_UINT1, const.CDF_UCHAR], 1),
                  ((1,), [const.CDF_FLOAT, const.CDF_REAL4,
                        const.CDF_DOUBLE, const.CDF_REAL8], 1),
+                 ((1,), [const.CDF_BYTE, const.CDF_INT1, const.CDF_UINT1,
+                         const.CDF_INT2, const.CDF_UINT2,
+                         const.CDF_INT4, const.CDF_UINT4,
+                         const.CDF_FLOAT, const.CDF_REAL4,
+                         const.CDF_DOUBLE, const.CDF_REAL8], 1),
                  ]
+        self.assertRaises(ValueError, cdf._Hyperslice.types, [object()])
         if cdf.lib.supports_int8: #explicitly test backward-compatible
             cdf.lib.supports_int8 = False
             try:
